--- a/front/src/index.html
+++ b/front/src/index.html
@@ -7,6 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" src="../src/assets/img/letter-n.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+  <style>
+    body, html{
+      height: 100%;
+    }
+
+    body{
+      background-color: #25273e;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
