--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seu Site</title>
+    <title>Nick</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <div class="content">
+    <div class="content container">
+        <h1>Olá, me chamo Nick</h1>
+        <p>Sei um pouco sobre horários, diciplicas e aulas dentro do <i>campus</i>. </p>
+
+        <p></p>
+        <h3>Vamos conversar?</h3>
     </div>
 
     <div class="chatbot">
-        <div class="chat-header">ChatBot</div>
+        <div class="chat-header">Pergunte</div>
         <div class="chat-body" id="chatBody"></div>
         <div class="chat-footer">
             <input type="text" id="userInput" placeholder="Digite sua pergunta...">
